# solo-harmonizer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  SbsmsWrapper.cpp  SbsmsWrapper.h  SbsmsWrapperTests.cpp  SoloHarmonizerEditor.cpp  SoloHarmonizerEditor.h  SoloHarmonizerProcessor.cpp  SoloHarmonizerProcessor.h  SoloHarmonizerTests.cpp  testUtils.cpp  testUtils.h
DavidCNAntonia/: PitchShifter.h
_doc/: class-diagram.puml  overview.puml  (+1 more)
_thirdParty/DavidCNAntonia/: CMakeLists.txt  IPitchShifter.h  PitchShifter.cpp  PitchShifter.h  RingBuffer.h
rubberband-wrapper/: CMakeLists.txt
saint/HarmoPitchGetter/: CMakeLists.txt  HarmoPitchFileReader.cpp  HarmoPitchFileReader.h  HarmoPitchGetter.cpp  HarmoPitchGetter.h  HarmoPitchGetterTests.cpp  HarmoPitchHelper.cpp  HarmoPitchHelper.h  HarmoPitchHelperTests.cpp  HarmoPitchTypes.cpp  HarmoPitchTypes.h
saint/IntervalGetter/: CMakeLists.txt  DefaultIntervalGetter.cpp  DefaultIntervalGetter.h  DefaultIntervalGetterFactory.cpp  DefaultIntervalGetterFactory.h  DefaultIntervalGetterTests.cpp  DefaultMelodyFollower.cpp  DefaultMelodyFollower.h  DefaultMelodyFollowerTests.cpp  DefaultPerformanceTimeWarper.cpp  DefaultPerformanceTimeWarper.h  DefaultPitchMapper.cpp  DefaultPitchMapper.h  DefaultPitchMapperHelper.cpp  DefaultPitchMapperHelper.h  DefaultPitchMapperHelperTests.cpp  IntervalGetter.cpp  IntervalGetter.h  IntervalGetterFactory.h  IntervalGetterTests.cpp  IntervalHelper.cpp  IntervalHelper.h  IntervalHelperTests.cpp  IntervalTypes.cpp  IntervalTypes.h  KeyRecognizer.cpp  KeyRecognizer.h  KeyRecognizerHelper.cpp  KeyRecognizerHelper.h  KeyRecognizerHelperTests.cpp  KrumhanslSchmucklerAlgorithm.cpp  KrumhanslSchmucklerAlgorithm.h  KrumhanslSchmucklerAlgorithmTests.cpp  PerformanceTimeWarper.h  PitchMapper.h  StochasticIntervalGetter.cpp  StochasticIntervalGetter.h  _DefaultPerformanceTimeWarper.cpp
saint/IntervalGetter/MelodyRecognizer3/: CMakeLists.txt  MelodyRecognizer3.cpp  MelodyRecognizer3.h  MelodyRecognizer3Tests.cpp
saint/IntervalGetter/MelodyTracker/: CMakeLists.txt  DefaultMelodyTracker.cpp  DefaultMelodyTracker.h  DefaultMelodyTrackerTests.cpp  MelodyTracker.h  MelodyTrackerHelper.cpp  MelodyTrackerHelper.h  TracingMelodyTracker.cpp  TracingMelodyTracker.h
saint/IntervalGetter/MelodyTracker/MelodyRecognizer/: DefaultMelodyRecognizer.cpp  DefaultMelodyRecognizer.h  DefaultMelodyRecognizerTests.cpp  MelodyRecognizer.h
saint/IntervalGetter/MelodyTracker/MelodyRecognizer/ObservationLikelihoodGetter/: DefaultObservationLikelihoodGetter.cpp  DefaultObservationLikelihoodGetter.h  ObservationLikelihoodGetter.h
saint/IntervalGetter/MelodyTracker/MelodyRecognizer2/: CMakeLists.txt  MelodyRecognizer2.cpp  MelodyRecognizer2.h  MelodyRecognizer2Tests.cpp
saint/IntervalGetter/MelodyTracker/MelodyRecognizer3/: CMakeLists.txt  MelodyRecognizer3.cpp  MelodyRecognizer3.h
saint/IntervalGetter/MelodyTracker/TimingEstimator/: DefaultTimingEstimator.cpp  DefaultTimingEstimator.h  TimingEstimator.h
saint/IntervalGetter/MelodyTracker2/: CMakeLists.txt  MelodyTracker2.cpp  MelodyTracker2.h  MelodyTracker2Tests.cpp
saint/IntervalGetter/_MelodyTracker/: DefaultMelodyTracker.h  MelodyTracker.h  MelodyTrackerHelper.cpp  MelodyTrackerHelper.h
saint/IntervalGetter/_MelodyTracker/MelodyRecognizer/: DefaultMelodyRecognizerTests.cpp  MelodyRecognizer.h
saint/IntervalGetter/_MelodyTracker/MelodyRecognizer2/: MelodyRecognizer2Tests.cpp
saint/IntervalGetter/_MelodyTracker/TimingEstimator/: DefaultTimingEstimator.cpp
saint/MidiFileOwner/: CMakeLists.txt  DefaultMidiFileOwner.cpp  DefaultMidiFileOwner.h  JuceMidiFileUtils.cpp  JuceMidiFileUtils.h  MidiFileOwner.h  PositionGetter.cpp  PositionGetter.h  PositionGetterTests.cpp
saint/OnsetDetector/: CMakeLists.txt  OnsetDetector.cpp  OnsetDetector.h  OnsetDetectorTests.cpp
saint/PitchDetector/: CMakeLists.txt  PitchDetector.cpp  PitchDetector.h  PitchDetectorImpl.cpp  PitchDetectorImpl.h  PitchDetectorImplTests.cpp  PitchDetectorTests.cpp
saint/SoloHarmonizer/: CMakeLists.txt  DefaultMidiFileOwner.cpp  DefaultMidiFileOwner.h  DisplayComponent.cpp  DisplayComponent.h  DisplayComponentHelper.cpp  DisplayComponentHelper.h  DisplayComponentHelperTests.cpp  DummyAudioProcessor.h  IGuiListener.h  JuceAudioPlayHeadProvider.h  MidiFileOwner.h  Playhead.cpp  Playhead.h  PositionGetter.h  SoloHarmonizer.cpp  SoloHarmonizer.h  SoloHarmonizerEditor.cpp  SoloHarmonizerEditor.h  SoloHarmonizerEditorTestApp.cpp  SoloHarmonizerHelper.cpp  SoloHarmonizerHelper.h  SoloHarmonizerProcessor.cpp  SoloHarmonizerProcessor.h  SoloHarmonizerTests.cpp  SoloHarmonizerTests.xml  SoloHarmonizerTypes.h  SoloHarmonizerVst.cpp  SoloHarmonizerVst.h  testUtils.h
saint/SoloHarmonizer/DavidCNAntonia/: RingBuffer.cpp  RingBuffer.h
saint/SoloHarmonizer/Factory/: EditorsFactoryView.h  HarmoPitchGetterFactory.cpp  HarmoPitchGetterFactory.h  IntervalGetterFactory.cpp  IntervalGetterFactory.h  ProcessorsFactoryView.h
saint/SoloHarmonizer/Intervaller/: EditorsFactoryView.h  Intervaller.h  IntervallerFactory.cpp  IntervallerFactory.h  IntervallerImpl.cpp  IntervallerImpl.h  ProcessorsFactoryView.h
saint/SoloHarmonizer/Playheads/: BuiltinPlayhead.cpp  BuiltinPlayhead.h  HostDrivenPlayhead.cpp  HostDrivenPlayhead.h  HostPlayhead.cpp  HostPlayhead.h  IPlayhead.h  ProcessCallbackDrivenPlayhead.cpp  ProcessCallbackDrivenPlayhead.h  ProcessCallbackDrivenPlayheadTests.cpp
saint/SoloHarmonizer/Tickers/: BuiltinTicker.cpp  BuiltinTicker.h  HostTicker.cpp  HostTicker.h  ITicker.h
saint/SoloHarmonizerEditorTestApp/: CMakeLists.txt  FilePlaybackComponent.cpp  FilePlaybackComponent.h  SoloHarmonizerEditorTestApp.cpp  TestAppMainWindow.cpp  TestAppMainWindow.h
saint/TestUtils/: CMakeLists.txt  IntervalGetterDebugCb.cpp  IntervalGetterDebugCb.h  PerformanceTimeWarperDebugCb.cpp  PitchDetectorDebugCb.cpp  PitchDetectorDebugCb.h  PitchDetectorImplDebugCb.cpp  PitchDetectorImplDebugCb.h  WavFileReader.cpp  WavFileReader.h  WavFileWriter.cpp  WavFileWriter.h  _PerformanceTimeWarperDebugCb.h  testUtils.cpp  testUtils.h
(+20 files in other folders)
